# linkedinadvice

./: .gitignore  README.md  TODO.md  main.py  pyproject.toml  requirements.txt
app/: constants.py  main.py  utils.py
linkedinadvice/: career_analysis.py  monitoring.py  utils.py
